<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="presenter"
            type="com.ane.expresstokenapp.modules.login.LoginContract.Presenter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_login_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_30" />

            <TextView
                android:id="@+id/tv_version_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16"
                android:textColor="@color/red"
                android:textSize="@dimen/font_size_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/size_16">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_16"
                    android:src="@mipmap/ic_login_net" />

                <com.ane.expresstokenapp.widget.view.EditTextWithDel
                    android:id="@+id/et_login_net"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/input_hint_net_code"
                    android:textColor="@color/common_text_color_333333"
                    android:textColorHint="@color/common_text_color_cccccc"
                    android:textSize="@dimen/font_size_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1"
                android:layout_marginBottom="@dimen/size_8"
                android:layout_marginTop="@dimen/size_8"
                android:background="@color/common_text_color_cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_16"
                    android:src="@mipmap/ic_login_name" />

                <com.ane.expresstokenapp.widget.view.EditTextWithDel
                    android:id="@+id/et_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/input_hint_login_name"
                    android:textColor="@color/common_text_color_333333"
                    android:textColorHint="@color/common_text_color_cccccc"
                    android:textSize="@dimen/font_size_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1"
                android:layout_marginBottom="@dimen/size_12"
                android:layout_marginTop="@dimen/size_12"
                android:background="@color/common_text_color_cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/size_16"
                    android:src="@mipmap/ic_login_password" />

                <com.ane.expresstokenapp.widget.view.EditTextWithDel
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/input_hint_login_password"
                    android:textColor="@color/common_text_color_333333"
                    android:textColorHint="@color/common_text_color_cccccc"
                    android:textSize="@dimen/font_size_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1"
                android:layout_marginBottom="@dimen/size_12"
                android:layout_marginTop="@dimen/size_12"
                android:background="@color/common_text_color_cccccc" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40"
                android:layout_marginBottom="@dimen/size_16"
                android:layout_marginLeft="@dimen/size_24"
                android:layout_marginRight="@dimen/size_24"
                android:layout_marginTop="@dimen/size_16"
                android:background="@drawable/selector_btn_half_circle"
                android:onClick="@{() -> presenter.login()}"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>

    </LinearLayout>
</layout>